--- a/src/app/user/dashboard/list-appointment/list-appointment.component.html
+++ b/src/app/user/dashboard/list-appointment/list-appointment.component.html
@@ -1,1 +1,63 @@
-<p>list-appointment works!</p>
+<app-navigation-bar></app-navigation-bar>
+<div class="container-fluid" [ngStyle]="{ 'margin-top': '120px' }">
+  <div class="row">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8">
+      <div
+        class="card text-white mb-4 shadow"
+        *ngFor="let appointment of appointments"
+        [ngClass]="{ 'bg-success': appointment.isRepaired, 'bg-dark': !appointment.isRepaired }"
+      >
+        <div class="card-header shade" *ngIf="appointment.isRepaired">Repaired Successfuly <i class="fa fa-star" aria-hidden="true"></i>
+        </div>
+        <div class="card-header shade" *ngIf="!appointment.isRepaired">Pending <i class="fa fa-hourglass-start" aria-hidden="true"></i>
+
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-9">
+              <h2 class="card-title shade">
+                <b>Appointment ID : {{ appointment.appointment_number }}</b>
+              </h2>
+              <p class="card-text shade">
+                Created On - 
+                <i>{{
+                  appointment.created_on | date: "dd-MMM-yy h:mm:ss a "
+                }}</i>
+              </p>
+            </div>
+            <div class="col-md-3">
+              <i *ngIf="appointment.isRepaired"
+                class="fa fa-check shade"
+                [ngStyle]="{ 'font-size': '80px' }"
+                aria-hidden="true"
+              ></i>
+              <i *ngIf="!appointment.isRepaired"
+                class="fa fa-hourglass-half"
+                [ngStyle]="{ 'font-size': '80px' }"
+                aria-hidden="true"
+              ></i>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+<!-- pagination start -->
+      <div class="text-xs-center">
+        <ul class="pagination pagination-lg justify-content-center">
+          <li class="page-item " [ngClass]="{'disabled': !hasPrev}">
+            <a class="page-link"  [routerLink]="['/user/all-appointments/']" [queryParams]="{'page': prevPage}" (click)="getNextPageOrPrevPage(prevPage)">&laquo;</a>
+          </li>
+          <li class="page-item active">
+            <a class="page-link" href="#">{{currentPage}}</a>
+          </li>
+          <li class="page-item" [ngClass]="{'disabled':nextPage==null}">
+            <a class="page-link"  [routerLink]="['/user/all-appointments/']" [queryParams]="{'page': nextPage}" (click)="getNextPageOrPrevPage(nextPage)">&raquo;</a>
+          </li>
+        </ul>
+      </div>
+<!-- pagination end -->
+    </div>
+    <div class="col-lg-2"></div>
+  </div>
+</div>
