--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,6 +4,11 @@
     <h4 class="alert-heading">Account Not Verified!</h4>
     <p class="mb-0"><strong>we have sent an activation link to your email</strong>, click on the activation link</p>
   </div>
+  <div *ngIf="status===404" class="alert alert-dismissible alert-info">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <h4 class="alert-heading">Account not found </h4>
+    <p class="mb-0"><strong>Try Login with Standard User Account</strong></p>
+  </div>
   <div class="container h-100">
     <div class="d-flex justify-content-center h-100">
       <div class="user_card">
