--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -6,12 +6,12 @@
       <ul class="nav sidebar-nav">
         <div class="sidebar-header">
         <div class="sidebar-brand">
-          <a [routerLink]="['/admin/']">Dj Mobile Garage</a></div></div>
+          <a [routerLink]="['/admin/']" [routerLinkActive]="['active']">Dj Mobile Garage</a></div></div>
         <li class="dropdown">
         <a href="#works" class="dropdown-toggle"  data-toggle="dropdown">Appointments<span class="caret"></span></a>
       <ul class="dropdown-menu animated fadeInLeft" role="menu">
       
-       <li><a href="#about"> <i class="fa fa-list"></i> All Appointments</a></li>
+       <li><a [routerLink]="['/admin/all-appointments/']" [routerLinkActive]="['active']"> <i class="fa fa-list"></i> All Appointments</a></li>
        <li><a href="#events"> <i class="fa fa-star"></i> New Appointments</a></li>
        <li><a href="#team"> <i class="fa fa-hourglass-start"></i> Pending Appointments</a></li>
       
