--- a/src/app/admin/appointment-list/appointment-list.component.html
+++ b/src/app/admin/appointment-list/appointment-list.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid" >
   <div class="row">
     <div class="col-lg-2"></div>
-    <div class="col-lg-8" *ngIf="appointments.length; else msgForNoAppointment">
+    <div class="col-lg-8" *ngIf="appointments!=undefined; else msgForNoAppointment">
       <hr>
       <h2 class="form-inline justify-content-center">
         {{ heading }}
@@ -56,10 +56,10 @@
                 [ngStyle]="{ 'font-size': '80px' }"
                 aria-hidden="true"
               ></i> -->
-              <button class="btn icon-size box-shade btn-primary">
+              <a class="btn  box-shade btn-primary" [routerLink]="['/admin/appointment-details/', appointment._id]">
                 <i class="fa fa-info-circle" aria-hidden="true"></i> View
                 Details
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -104,5 +104,4 @@
     to Book your First Appointment
   </h2>
 </ng-template>
-<!-- <button [disabled]="a===true"  (click)="cancel()" class="btn icon-size box-shade ml-2 btn-danger float-right"><i class="fa fa-ban" aria-hidden="true"></i> REJECT</button>
-          <button [disabled]="a===false" (click)="accept()" class=" icon-size btn box-shade btn-success float-right"><i class="fa fa-check-circle " aria-hidden="true"></i> ACCEPT</button> -->
+
