--- a/src/app/user/dashboard/create-appointment/create-appointment.component.html
+++ b/src/app/user/dashboard/create-appointment/create-appointment.component.html
@@ -80,7 +80,7 @@
               id="exampleSelect1"
               formControlName="pickup_Time"
             >
-            <option value="" [selected] disabled>select date</option>
+            <option value="" [selected] disabled>Select Time</option>
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
