--- a/src/app/user/dashboard/list-appointment/list-appointment.component.html
+++ b/src/app/user/dashboard/list-appointment/list-appointment.component.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-lg-2"></div>
-    <div class="col-lg-8" *ngIf="appointments.length;else msgForNoAppointment">
+    <div class="col-lg-8" *ngIf="appointments!=undefined;else msgForNoAppointment">
       <h2 ><i class="fa fa-list" aria-hidden="true" ></i>&nbsp;
          Appointments You have Booked so far...</h2>
       <div
