accept and reject appointment completed

--- a/src/app/admin/appointment-details/appointment-details.component.html
+++ b/src/app/admin/appointment-details/appointment-details.component.html
@@ -1,6 +1,7 @@
 <div class="container p-4" *ngIf="details!=undefined" >
-    <div class="row pl-4 pr-4 justify-content-center">
-        <h2 class="appointment_title" style="letter-spacing: 8px;" >{{details.appointment_number}}</h2>
+    <div class="row pl-4 pr-4 ">
+      <h2 class="appointment_title justify-content-center" style="letter-spacing: 8px;" >{{details.appointment_number}}</h2>
+      <button class="btn btn-primary text-right">Go Back</button> 
     </div>
     <hr>
   <div class="row">
@@ -31,7 +32,7 @@
               <div class="carousel-item active">
                 <img
                   class="d-block w-100"
-                  src="{{details.problem_Image}}"
+                  src="{{apiBaseUrl}}/uploads/{{details.problem_Image}}"
                   alt="First slide"
                   height="500"
                 />
@@ -62,7 +63,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-          <div *ngIf="true">
+          <div *ngIf="details.problem_Image==null">
                 <img class="img-fluid" src="../../../assets/image-not-found.png" height="500" alt="Image not found">
           </div>
         </div>
@@ -72,14 +73,14 @@
         <div class="col-sm-6 ">
         
          
-          <button class="icon-size btn box-shade btn-success">
+          <button class="icon-size btn box-shade btn-success" (click)="acceptAppointment(details._id)" [disabled]=" details.isApproved==true">
             <i class="fa fa-check-circle" aria-hidden="true"></i> ACCEPT
           </button>
         
         </div>
         <div class="col-sm-6">
            
-            <button class="btn icon-size box-shade btn-danger">
+            <button class="btn icon-size box-shade btn-danger" (click)="rejectAppointment(details._id)" [disabled]="details.isApproved==false">
                 <i class="fa fa-ban" aria-hidden="true"></i> REJECT
               </button>
         </div>
@@ -98,6 +99,7 @@
       <div class="row border mt-4 p-4 box-shade bg-info justify-content-center"  id="button-wrapper">
         <h1 class="appoint-number-color">PickUp Date : {{details.pickup_Date}}</h1> 
         <h1 class="appoint-number-color"> PickUp Time : {{details.pickup_Time}}</h1>
+        <h2 class="appoint-number-color"> Address : {{details.user_Address}}</h2>
       </div>
     </div>
   </div>
