new Appointment resolved appointment added

--- a/src/app/admin/appointment-details/appointment-details.component.html
+++ b/src/app/admin/appointment-details/appointment-details.component.html
@@ -1,7 +1,7 @@
 <div class="container p-4" *ngIf="details!=undefined" >
-    <div class="row pl-4 pr-4 ">
-      <h2 class="appointment_title justify-content-center" style="letter-spacing: 8px;" >{{details.appointment_number}}</h2>
-      <button class="btn btn-primary text-right">Go Back</button> 
+    <div class="row pl-4 pr-4 justify-content-center">
+      <h2 class="appointment_title " style="letter-spacing: 8px;" >{{details.appointment_number}}</h2>
+    
     </div>
     <hr>
   <div class="row">
