--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -12,8 +12,8 @@
       <ul class="dropdown-menu animated fadeInLeft" role="menu">
       
        <li><a [routerLink]="['/admin/all-appointments/']" [routerLinkActive]="['active']"> <i class="fa fa-list"></i> All Appointments</a></li>
-       <li><a href="#events"> <i class="fa fa-star"></i> New Appointments</a></li>
-       <li><a href="#team"> <i class="fa fa-hourglass-start"></i> Pending Appointments</a></li>
+       <li><a [routerLink]="['/admin/new-appointments']"> <i class="fa fa-star"></i> New Appointments</a></li>
+       <li><a [routerLink]="['/admin/pending-appointments']"> <i class="fa fa-hourglass-start"></i> Pending Appointments</a></li>
       
       </ul>
        </li>
