--- a/src/app/admin/appointment-list/appointment-list.component.html
+++ b/src/app/admin/appointment-list/appointment-list.component.html
@@ -1,72 +1,116 @@
-<div class="container-fluid" >
+<div class="container-fluid">
   <div class="row">
     <div class="col-lg-2"></div>
-    <div class="col-lg-8" *ngIf="appointments!=undefined; else msgForNoAppointment">
-      <hr>
-     
-      <div class="form-inline justify-content-around">
-        <div>
-         <a  class="btn" (click)="allAppointments()"> <i class="fa fa-chevron-left" aria-hidden="true" >Go Back</i></a>
+    <div
+      class="col-lg-8"
+      *ngIf="appointments != undefined; else msgForNoAppointment"
+    >
+      <hr />
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="row justify-content-between">
+            <!-- <div class="col-lg-12"> -->
+              <a class="btn form-inline" (click)="allAppointments()">
+                <i class="fa fa-chevron-left" aria-hidden="true">Go Back</i></a
+              >
 
+              <form class="form-inline my-2 my-lg-0">
+                <input
+                  class="form-control mr-sm-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button
+                  class="btn btn-outline-primary my-2 my-sm-0"
+                  type="submit"
+                >
+                  Search
+                </button>
+              </form>
+            <!-- </div> -->
+          </div>
+          <div class="row">
+            <div class="col-lg-12"></div>
+          </div>
+          <div class="form-inline justify-content-between">
+            <label class="form-check-label">
+              <input
+                type="radio"
+                name="optionsRadios"
+                [checked]="!PendingResetRadioBtn"
+                (change)="getPendingAppointment()"
+                id="optionsRadios2"
+                value="option2"
+              />&nbsp;&nbsp; Pending Appointments
+            </label>
+
+            <label class="form-check-label">
+              <input
+                type="radio"
+                name="optionsRadios"
+                [checked]="!NewResetRadioBtn"
+                (change)="getNewAppointments()"
+                id="optionsRadios2"
+                value="option2"
+              />&nbsp;&nbsp; New Appointments
+            </label>
+
+            <label class="form-check-label">
+              <input
+                type="radio"
+                [checked]="!ResolvedResetRadioBtn"
+                name="optionsRadios"
+                (change)="getResolvedAppointments()"
+                id="optionsRadios3"
+                value="option3"
+              />
+              Resolved Appointments
+            </label>
+          </div>
         </div>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-
-       
-       
-          <label class="form-check-label">
-            <input type="radio"  name="optionsRadios"  [checked]="!NewResetRadioBtn"  (change)="getNewAppointments()" id="optionsRadios2" value="option2">&nbsp;&nbsp; New Appointments
-          </label>
-       
-       
-          <label class="form-check-label">
-            <input type="radio" [checked]="!ResolvedResetRadioBtn"  name="optionsRadios" (change)="getResolvedAppointments()" id="optionsRadios3" value="option3" > Resolved Appointments
-          </label>
-        
-       
       </div>
-      <hr>
+      <div class="row">
+        <div class="col-lg-12">
+          <hr />
 
-      <app-list-element [appointments] = "appointments"></app-list-element>
-      
-      <!-- pagination start -->
-      <div class="text-xs-center" *ngIf="currentPage !=null">
-        <ul class="pagination pagination-lg justify-content-center">
-          <li class="page-item" [ngClass]="{ disabled: !hasPrev }">
-            <a
-              class="page-link"
-              [routerLink]="['/user/all-appointments/']"
-              [queryParams]="{ page: prevPage }"
-              (click)="getNextPageOrPrevPage(prevPage)"
-              >&laquo;</a
-            >
-          </li>
-          <li class="page-item active" >
-            <a class="page-link">{{ currentPage }}</a>
-          </li>
-          <li class="page-item" [ngClass]="{ disabled: nextPage == null }">
-            <a
-              class="page-link"
-              [routerLink]="['/user/all-appointments/']"
-              [queryParams]="{ page: nextPage }"
-              (click)="getNextPageOrPrevPage(nextPage)"
-              >&raquo;</a
-            >
-          </li>
-        </ul>
+          <app-list-element [appointments]="appointments"></app-list-element>
+
+          <!-- pagination start -->
+          <div class="text-xs-center" *ngIf="currentPage != null">
+            <ul class="pagination pagination-lg justify-content-center">
+              <li class="page-item" [ngClass]="{ disabled: !hasPrev }">
+                <a
+                  class="page-link"
+                  [routerLink]="['/user/all-appointments/']"
+                  [queryParams]="{ page: prevPage }"
+                  (click)="getNextPageOrPrevPage(prevPage)"
+                  >&laquo;</a
+                >
+              </li>
+              <li class="page-item active">
+                <a class="page-link">{{ currentPage }}</a>
+              </li>
+              <li class="page-item" [ngClass]="{ disabled: nextPage == null }">
+                <a
+                  class="page-link"
+                  [routerLink]="['/user/all-appointments/']"
+                  [queryParams]="{ page: nextPage }"
+                  (click)="getNextPageOrPrevPage(nextPage)"
+                  >&raquo;</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- pagination end -->
+        </div>
       </div>
-      <!-- pagination end -->
     </div>
 
-    <div class="col-lg-2"> 
-           
-     </div>
-     
+    <div class="col-lg-2"></div>
   </div>
 </div>
-<ng-template #msgForNoAppointment >
- <h2>{{msg}}</h2>&nbsp;&nbsp;<a class="btn btn-warning " (click)="allAppointments()" >Go Back</a>
+<ng-template #msgForNoAppointment>
+  <h2>{{ msg }}</h2>
+  &nbsp;&nbsp;<a class="btn btn-warning" (click)="allAppointments()">Go Back</a>
 </ng-template>
-
