--- a/src/app/admin/appointment-list/appointment-list.component.html
+++ b/src/app/admin/appointment-list/appointment-list.component.html
@@ -1,14 +1,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-2"></div>
-    <div
-      class="col-lg-8"
-      *ngIf="appointments != undefined; else msgForNoAppointment"
-    >
-      <hr />
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="row justify-content-between">
+    <div  class="col-lg-8"  *ngIf="appointments != undefined; else msgForNoAppointment"  >
+      <div class="row ">
+        <div class="col-lg-12 ">
+          <div class="row mb-4 justify-content-between">
             <!-- <div class="col-lg-12"> -->
               <a class="btn form-inline" (click)="allAppointments()">
                 <i class="fa fa-chevron-left" aria-hidden="true">Go Back</i></a
