--- a/src/app/admin/appointment-list/appointment-list.component.css
+++ b/src/app/admin/appointment-list/appointment-list.component.css
@@ -3,3 +3,13 @@ input[type=radio] {
     width: 100%;
     height: 2em;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
