--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -2,9 +2,9 @@
   <div class="row">
    
         <div class="col-md-4 ">
-            <div class="card-counter danger ">
+            <div class="card-counter new ">
             <i class="fa fa-star"></i>
-            <span class="count-numbers">599</span>
+            <span class="count-numbers">{{new_appointments}}</span>
             <span class="count-name">New Appointments</span>
             </div>
         </div>
@@ -12,7 +12,7 @@
         <div class="col-md-4">
             <div class="card-counter success">
             <i class="fa fa-th-list"></i>
-            <span class="count-numbers">6875</span>
+            <span class="count-numbers">{{total_appointments}}</span>
             <span class="count-name">Total Appointments</span>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <div class="col-md-4">
             <div class="card-counter info">
             <i class="fa fa-users"></i>
-            <span class="count-numbers">35</span>
+            <span class="count-numbers">{{verified_user}}</span>
             <span class="count-name">Verified Users</span>
             </div>
         </div>
@@ -28,8 +28,16 @@
         <div class="col-md-4">
             <div class="card-counter primary">
             <i class="fa fa-hourglass-start"></i>
-            <span class="count-numbers">35</span>
+            <span class="count-numbers">{{pending_case}}</span>
             <span class="count-name">Pending Cases</span>
+            </div>
+        </div>
+
+        <div class="col-md-4 ">
+            <div class="card-counter warning ">
+            <i class="fa fa-users"></i>
+            <span class="count-numbers">{{total_users}}</span>
+            <span class="count-name">All Users Registered</span>
             </div>
         </div>
    
