appointment file upload implemented

--- a/src/app/admin/appointment-details/appointment-details.component.html
+++ b/src/app/admin/appointment-details/appointment-details.component.html
@@ -32,11 +32,12 @@
               <div class="carousel-item active">
                 <img
                   class="d-block w-100"
-                  src="{{apiBaseUrl}}/uploads/{{details.problem_Image}}"
-                  alt="First slide"
+                  src="{{apiBaseUrl}}/uploads/appointments/{{details.problem_Image}}"
+                  alt=" {{details.problem_Image}} not found"
                   height="500"
                 />
               </div>
+             
             </div>
             <a
               class="carousel-control-prev"
