--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
         <div class="col-md-4 ">
             <div class="card-counter new ">
             <i class="fa fa-star"></i>
+            <span class="badge badge-light"></span>
             <span class="count-numbers">{{new_appointments}}</span>
             <span class="count-name">New Appointments</span>
             </div>
