--- a/src/app/admin/appointment-list/appointment-list.component.html
+++ b/src/app/admin/appointment-list/appointment-list.component.html
@@ -6,7 +6,7 @@
         <div class="col-lg-12 ">
           <div class="row mb-4 justify-content-between">
             <!-- <div class="col-lg-12"> -->
-              <a class="btn form-inline" (click)="allAppointments()">
+              <a class="btn form-inline" (click)="allAppointments(1)">
                 <i class="fa fa-chevron-left" aria-hidden="true">Go Back</i></a
               >
 
@@ -20,7 +20,7 @@
                   ngModel
                  name="text"
                 />
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-secondary my-2 my-sm-0"  type="submit">Search</button>
              
               </form>
             <!-- </div> -->
@@ -34,7 +34,7 @@
                 type="radio"
                 name="optionsRadios"
                 [checked]="!PendingResetRadioBtn"
-                (change)="getPendingAppointment()"
+                (change)="getPendingAppointment(1)"
                 id="optionsRadios2"
                 value="option2"
               />&nbsp;&nbsp; Pending Appointments
@@ -45,7 +45,7 @@
                 type="radio"
                 name="optionsRadios"
                 [checked]="!NewResetRadioBtn"
-                (change)="getNewAppointments()"
+                (change)="getNewAppointments(1)"
                 id="optionsRadios2"
                 value="option2"
               />&nbsp;&nbsp; New Appointments
@@ -56,7 +56,7 @@
                 type="radio"
                 [checked]="!ResolvedResetRadioBtn"
                 name="optionsRadios"
-                (change)="getResolvedAppointments()"
+                (change)="getResolvedAppointments(1)"
                 id="optionsRadios3"
                 value="option3"
               />
@@ -72,12 +72,12 @@
           <app-list-element [appointments]="appointments"></app-list-element>
 
           <!-- pagination start -->
-          <div class="text-xs-center" *ngIf="currentPage != null">
+          <div class="text-xs-center" >
             <ul class="pagination pagination-lg justify-content-center">
               <li class="page-item" [ngClass]="{ disabled: !hasPrev }">
                 <a
                   class="page-link"
-                  [routerLink]="['/user/all-appointments/']"
+                  [routerLink]="['/admin/all-appointments/']"
                   [queryParams]="{ page: prevPage }"
                   (click)="getNextPageOrPrevPage(prevPage)"
                   >&laquo;</a
@@ -89,7 +89,7 @@
               <li class="page-item" [ngClass]="{ disabled: nextPage == null }">
                 <a
                   class="page-link"
-                  [routerLink]="['/user/all-appointments/']"
+                  [routerLink]="['/admin/all-appointments/']"
                   [queryParams]="{ page: nextPage }"
                   (click)="getNextPageOrPrevPage(nextPage)"
                   >&raquo;</a
@@ -107,5 +107,5 @@
 </div>
 <ng-template #msgForNoAppointment>
   <h2>{{ msg }}</h2>
-  &nbsp;&nbsp;<a class="btn btn-warning" (click)="allAppointments()">Go Back</a>
+  &nbsp;&nbsp;<a class="btn btn-warning" (click)="allAppointments(1)">Go Back</a>
 </ng-template>
