spinner interceptor and service added

--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div class="page-overlay-wrapper justify-content-center" >
+<div class="page-overlay-wrapper justify-content-center" *ngIf="showSpinner" >
     <div class="bee-spinner" style="width: 100px; height: 100px;" role="status">
         <span class="sr-only">Loading...</span>
       </div>
