--- a/src/app/share-module/navigation-bar/navigation-bar.component.html
+++ b/src/app/share-module/navigation-bar/navigation-bar.component.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link"  [routerLink]="['/user/dashboard']" [routerLinkActive]="['active']"
+          <a class="nav-link"  [routerLink]="['']" [routerLinkActive]="['active']"
             >Home
             <span class="sr-only">(current)</span>
           </a>
