--- a/src/app/user/dashboard/create-appointment/create-appointment.component.html
+++ b/src/app/user/dashboard/create-appointment/create-appointment.component.html
@@ -1,4 +1,4 @@
-<app-navigation-bar></app-navigation-bar>
+<!-- <app-navigation-bar></app-navigation-bar> -->
 <div class="container">
   <div class="row" [ngStyle]="{ 'margin-top': '120px' }">
     <div class="col-lg-2"></div>
