--- a/src/app/admin/appointment-details/appointment-details.component.css
+++ b/src/app/admin/appointment-details/appointment-details.component.css
@@ -6,3 +6,12 @@
 #button-wrapper {
   padding-top: 30px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
