--- a/src/app/user/dashboard/list-appointment/list-appointment.component.html
+++ b/src/app/user/dashboard/list-appointment/list-appointment.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-lg-2"></div>
-    <div class="col-lg-8" *ngIf="appointments!=undefined;else msgForNoAppointment">
+    <div class="col-lg-8" *ngIf="appointments">
       <h2 ><i class="fa fa-list" aria-hidden="true" ></i>&nbsp;
          Appointments You have Booked so far...</h2>
       <div
@@ -63,6 +63,6 @@
     <div class="col-lg-2"></div>
   </div>
 </div>
-<ng-template #msgForNoAppointment>
+<div *ngIf="appointments ===null">
   <h2>You have not book any appointment so far ....  <br> <a [routerLink]="['/user/new-appointment']" class="btn btn-primary">Click Here</a> to Book your First Appointment</h2>
-</ng-template>
+</div>
