--- a/src/app/admin/add-category/add-category.component.html
+++ b/src/app/admin/add-category/add-category.component.html
@@ -24,7 +24,7 @@
             * atleast 4 character required !
           </div>
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
+        <button type="submit" class="btn btn-primary " [disabled]="!form.valid">
           Save 
         </button>
       </form>
@@ -47,8 +47,8 @@
               <td>{{i+1}}</td>
               <td>{{category.name}}</td>
               <td>
-                  <button title="Delete" (click)="deleteCategory(category._id)" style="border: none;font-size: 25px;background: none;"><i class="fa fa-trash" aria-hidden="true"></i></button>&nbsp;&nbsp;
-                  <button title="Edit" (click)="setDataForEdit(category._id , category.name, editForm)" style="border: none;font-size: 25px;background: none;"><i class="fa fa-paint-brush" aria-hidden="true"></i></button>
+                  <button title="Delete" (click)="deleteCategory(category._id)" style="border: none;font-size: 25px;background: none;color: red;"><i class="fa fa-trash" aria-hidden="true"></i></button>&nbsp;&nbsp;
+                  <button title="Edit" (click)="setDataForEdit(category._id , category.name, editForm)" style="border: none;font-size: 25px;background: none;color: blue;"><i class="fa fa-paint-brush" aria-hidden="true"></i></button>
               </td>
             </tr>
             
